# Social-Network-Project

./: CMakeLists.txt  README.md
resources/: memory_saving.csv  memory_saving_aux.csv  posts.csv  posts_aux.csv  posts_vegan.csv  stop_words.txt  user_vegan.csv  usertest.csv
source/headers/: common.h  community.h  menu.h  stop_words.h  user.h  utils.h
source/sources/: common.c  community.c  hash_table.c  main.c  menu.c  stop_words.c  user.c  utils.c
